# Generated by Django 6.0.3 on 2026-03-19 13:31

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='AuditLog',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('actor_role', models.CharField(blank=True, max_length=20, null=True)),
                ('action', models.CharField(max_length=120)),
                ('target_type', models.CharField(blank=True, max_length=120, null=True)),
                ('target_id', models.CharField(blank=True, max_length=64, null=True)),
                ('target_label', models.CharField(blank=True, max_length=255, null=True)),
                ('metadata', models.JSONField(blank=True, default=dict)),
            ],
            options={
                'ordering': ('-created_at',),
            },
        ),
    ]
