# Generated by Django 6.0.3 on 2026-03-19 13:31

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='FeedbackEntry',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('entry_type', models.CharField(choices=[('feedback', 'Feedback'), ('report', 'Report')], default='feedback', max_length=20)),
                ('subject', models.CharField(max_length=150)),
                ('message', models.TextField()),
                ('status', models.CharField(choices=[('open', 'Open'), ('reviewed', 'Reviewed'), ('resolved', 'Resolved')], default='open', max_length=20)),
            ],
            options={
                'ordering': ('-created_at',),
            },
        ),
    ]
