# Generated by Django 6.0.3 on 2026-03-19 13:31

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='TableSession',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('source', models.CharField(choices=[('qr', 'QR'), ('walk_in', 'Walk In'), ('waiter', 'Waiter'), ('manual', 'Manual')], default='manual', max_length=20)),
                ('party_size', models.PositiveIntegerField(default=1)),
                ('guest_label', models.CharField(blank=True, max_length=120, null=True)),
                ('started_at', models.DateTimeField(auto_now_add=True)),
                ('ended_at', models.DateTimeField(blank=True, null=True)),
                ('is_active', models.BooleanField(default=True)),
            ],
            options={
                'ordering': ('-started_at',),
            },
        ),
    ]
